Fixed: Added overflow property to admin menu for left position in back office

--- a/admin/themes/default/sass/partials/_nav.sass
+++ b/admin/themes/default/sass/partials/_nav.sass
@@ -8,6 +8,7 @@ $min-height: 850px
 	width: $widthSidebarNav
 	height: 100%
 	z-index: 500
+	overflow-y: auto
 	background-color: $main-color
 	@include left(0)
 	ul.menu
